# VTCode-modme

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: build-linux-windows.yml  release.yml
crates/codegen/vtcode-a2a/: Cargo.toml
crates/codegen/vtcode-config/: build.rs
crates/codegen/vtcode-skills/: Cargo.toml
crates/codegen/vtcode-skills/src/: bundle.rs  command_skills.rs  native_plugin.rs
crates/codegen/xtask/: AGENTS.md  (+1 more)
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONTRIBUTING.md  FAQ.md  INDEX.md  README.md  SECURITY.md  loop-engineering.md  models.json
docs/acp/: ACP_INTEGRATION.md  ACP_QUICK_REFERENCE.md
docs/async/: ASYNC_ARCHITECTURE.md  README.md
docs/benchmarks/: BENCHMARK_COMPARISON.md  CHART_GUIDE.md  COMPARISON.md  HUMANEVAL_2025-10-22.md  README.md  SUMMARY.md  VISUALIZATION.md
docs/blog/: battery-packs.md
docs/config/: CONFIG_FIELD_REFERENCE.md  config.md
docs/context/: context_engineering.md
docs/development/: ALLOCATOR_MEMORY.md  COMMAND_SECURITY_MODEL.md  DEVELOPMENT_SETUP.md  EXECUTION_POLICY.md  ai-tool-surface-eval-cases.json  asset-synchronization.md  ci-cd.md  grep-tool-guide.md  testing.md
docs/guides/: agent-loop-contract.md  async-architecture.md  code-organization-patterns.md  full-automation.md  hooks-guide.md  macos-alt-shortcut-troubleshooting.md  mcp-integration.md  minimax-integration.md  planning-workflow.md  security.md  tui-event-handling.md  zed-acp.md
docs/harness/: ARCHITECTURAL_INVARIANTS.md  TECH_DEBT_TRACKER.md
docs/huggingface/: index.md
docs/ide/: downloads.md
docs/mcp/: MCP_INTEGRATION_GUIDE.md
docs/modules/: println_tui_audit.md  vtcode_a2a.md  vtcode_commons_reference.md  vtcode_config_migration.md  vtcode_docs_map.md  vtcode_llm.md  vtcode_llm_environment.md  vtcode_mcp.md  vtcode_safety.md  vtcode_skills.md  vtcode_ui.md
docs/project/: PLAN-loop-engineering.md  TODO.md  modes-audit-bug-report.md  vtcode-modes-subagents-audit.md
docs/protocols/: ZED_EXTENSION_FILE_SEARCH.md
docs/providers/: OLLAMA_INDEX.md  PROVIDER_GUIDES.md  lmstudio-quick-reference.md
docs/sandbox/: SANDBOX_FIELD_GUIDE.md
docs/security/: SECURITY_DOCUMENTATION_INDEX.md
docs/skills/: CONTAINER_GUIDE.md  NATIVE_PLUGIN_IMPLEMENTATION.md
docs/styling/: ARCHITECTURE.md  INDEX.md  RATATUI_FAQ_INTEGRATION.md  anstyle-crates-research.md  styling_integration.md
docs/tools/: EDITOR_CONFIG.md  TOOL_SEARCH.md  TOOL_SPECS.md
docs/user-guide/: commands.md  getting-started.md  interactive-mode.md
extensions/vscode-extension/: DEVELOPMENT.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: unified_path_validation.rs
homebrew/: vtcode.rb
rules/rust/: prefer-unwrap-or-else.yml
scripts/: check-dev.sh  check.sh  check_structured_logging.py  large_file_allowlist.txt  publish_extracted_crates.sh  release-lib.sh  release.sh  setup-agent-extension.sh  structured_logging_allowlist.txt
src/: AGENTS.md  allocator.rs  lib.rs  main.rs
src/cli/: bench_allocator.rs  check.rs  mod.rs  secret.rs  session_store.rs  update.rs
src/codex_app_server/: runtime.rs
src/main_helpers/: bootstrap.rs  relaunch.rs
src/startup/: first_run.rs  mod.rs  validation.rs  workspace_trust.rs
src/updater/: cache.rs  github.rs  install_source.rs  interactive.rs  mod.rs  preflight.rs  release_notes.rs
tests/: acp_fixtures.rs  acp_integration.rs  advanced_tui_scenario_tests.rs  ansi_file_ops_test.rs  cache_e2e_tests.rs  cache_tests.rs  check_script_ast_grep.rs  cli_harness_failures.rs  cli_smoke.rs  color_utilities_test.rs  common.rs  enhanced_execute_code_test.rs  error_scenarios_integration.rs  file_search_integration.rs  help_dynamic.rs  improved_tui_snapshot_tests.rs  integration_modular.rs  integration_path_env.rs  integration_permission_system.rs  integration_tests.rs  language_consistency_test.rs  llm_focused_test.rs  llm_provider_integration.rs  llm_providers_test.rs  manual_pty_test.rs  mock_data.rs  mod.rs  models_sync.rs  open_responses_compliance.rs  parallel_execution_test.rs  performance_optimization_test.rs  plugin_system_test.rs  pods_cli.rs  prompt_extraction_test.rs  prompt_loader.rs  ratatui_integration_tests.rs  reliability_tests.rs  safety_hitl_access_test.rs  stats_command_test.rs  test_consolidated_search.rs  (+11 more)
vtcode-a2a/src/: client.rs  lib.rs
vtcode-acp/: Cargo.toml
vtcode-acp/src/: lib.rs
vtcode-auth/src/: mcp_oauth.rs  openrouter_oauth.rs
vtcode-bash-runner/: AGENTS.md  Cargo.toml
vtcode-bash-runner/src/: process.rs  runner.rs
vtcode-battery-pack/: Cargo.toml
vtcode-battery-pack/src/: categories.rs  lib.rs
vtcode-commons/: AGENTS.md  Cargo.toml
vtcode-commons/src/: error_category.rs  lib.rs  lr_map.rs
vtcode-config/: AGENTS.md  Cargo.toml
vtcode-config/src/: lib.rs  output_styles.rs  root.rs  subagents.rs  workspace_env.rs
vtcode-config/tests/: loader.rs  schema.rs
vtcode-core/: AGENTS.md  Cargo.toml
vtcode-core/benches/: agent_harness.rs
vtcode-core/src/: components.rs  error.rs  lib.rs  memory_integration_tests.rs  permissions.rs  primary_agent.rs  tool_policy.rs
vtcode-core/tests/: apply_patch_comprehensive.rs  create_file_tool.rs  delete_file_tool.rs  file_conflict_integration.rs  phase4_dual_output_integration.rs  pty_test.rs  pty_unicode_test.rs  real_execute_tool_ref_optimization_test.rs  run_command_tool.rs  unified_search_preflight_aliases.rs  web_fetch_default_prompt_test.rs
vtcode-eval/: Cargo.toml
vtcode-exec-events/src/: lib.rs
vtcode-indexer/: Cargo.toml
vtcode-indexer/src/: file_search.rs  lib.rs  markdown_store.rs
vtcode-llm/: Cargo.toml
vtcode-mcp/: Cargo.toml
vtcode-mcp/src/: client.rs  lib.rs  rmcp_client.rs
vtcode-safety/: Cargo.toml
vtcode-session-store/: Cargo.toml
vtcode-skills/: Cargo.toml
vtcode-skills/src/: authoring.rs  command_skills.rs  container_validation.rs  manifest.rs  native_plugin.rs  prompt_integration.rs  render.rs  types.rs  validation_report.rs
vtcode-ui/: Cargo.toml
vtcode-utility-tool-specs/src/: collaboration.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
zed-extension/src/: lib.rs
(+609 files in other folders)
