[package]
name = "vtcode-battery-pack"
version = "0.135.11"
edition = "2024"
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Curated battery pack of VT Code crates — the complete toolkit for building Rust coding agents"
license = "MIT"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-battery-pack"
keywords = ["vtcode", "battery-pack", "coding-agent", "llm", "tui"]
categories = ["development-tools"]

[dependencies]
# --- Core runtime (pick at most one stack) ---
vtcode-core = { path = "../vtcode-core", version = "0.135.11", optional = true }
vtcode-ui = { path = "../vtcode-ui", version = "0.135.11", optional = true }

# --- Configuration ---
vtcode-config = { path = "../vtcode-config", version = "0.135.11", optional = true }

# --- Shared infrastructure ---
vtcode-commons = { path = "../vtcode-commons", version = "0.135.11", optional = true }
vtcode-macros = { path = "../vtcode-macros", version = "0.135.11", optional = true }

# --- Agent protocols (pick any number) ---
vtcode-acp = { path = "../vtcode-acp", version = "0.135.11", optional = true }
vtcode-a2a = { path = "../vtcode-a2a", version = "0.135.11", optional = true }
vtcode-mcp = { path = "../vtcode-mcp", version = "0.135.11", optional = true }

# --- LLM providers ---
vtcode-llm = { path = "../vtcode-llm", version = "0.135.11", optional = true }

# --- Skills & extensibility ---
vtcode-skills = { path = "../vtcode-skills", version = "0.135.11", optional = true }

# --- Safety & execution (pick any number) ---
vtcode-safety = { path = "../vtcode-safety", version = "0.135.11", optional = true }
vtcode-bash-runner = { path = "../vtcode-bash-runner", version = "0.135.11", optional = true }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.135.11", optional = true }

# --- Session state & memory ---
vtcode-session-store = { path = "../vtcode-session-store", version = "0.135.11", optional = true }

# --- Tooling, specs, indexing ---
vtcode-utility-tool-specs = { path = "../vtcode-utility-tool-specs", version = "0.135.11", optional = true }
vtcode-indexer = { path = "../vtcode-indexer", version = "0.135.11", optional = true }

# --- Evaluation ---
vtcode-eval = { path = "../vtcode-eval", version = "0.135.11", optional = true }

# --- Authentication ---
vtcode-auth = { path = "../vtcode-auth", version = "0.135.11", optional = true }

[features]
# Full stack — every VT Code crate.
full = [
    "core",
    "config",
    "commons",
    "macros",
    "protocols",
    "llm",
    "skills",
    "safety",
    "execution",
    "state",
    "tools",
    "eval",
    "auth",
]

# Core runtime (required for any agent)
core = ["vtcode-core"]

# Terminal UI layer
tui = ["vtcode-ui"]

# Configuration loader
config = ["vtcode-config"]

# Shared traits and utilities
commons = ["vtcode-commons"]

# Procedural macros
macros = ["vtcode-macros"]

# Protocol support (pick any number)
protocols = ["vtcode-acp", "vtcode-a2a", "vtcode-mcp"]

# LLM provider abstraction
llm = ["vtcode-llm"]

# Skills system
skills = ["vtcode-skills"]

# Safety detection and policies
safety = ["vtcode-safety"]

# Shell execution sandbox
execution = ["vtcode-bash-runner", "vtcode-exec-events"]

# Session state and durable loop state
state = ["vtcode-session-store"]

# Tool specs, indexer, and search
tools = ["vtcode-utility-tool-specs", "vtcode-indexer"]

# Evaluation harness
eval = ["vtcode-eval"]

# OAuth / credential storage
auth = ["vtcode-auth"]

# Internal-only crates (not published to crates.io).
# Enable when working inside the VT Code repo.
internal = ["vtcode-llm", "vtcode-skills", "vtcode-safety", "vtcode-a2a", "vtcode-mcp"]

# Sensible defaults for building a coding agent
default = ["core", "config", "commons", "macros", "execution", "state", "tools", "auth"]

[package.metadata.battery-pack]
name = "VT Code"
description = "Complete toolkit for building Rust coding agents with OS-native sandboxing, multi-provider LLM support, and extensible skills"
repository = "https://github.com/vinhnx/vtcode"

[[package.metadata.battery-pack.categories]]
id = "core"
name = "Core Runtime"
description = "The agent runtime, TUI, and event loop"
pick = "at-most-one"

[[package.metadata.battery-pack.categories]]
id = "protocols"
name = "Agent Protocols"
description = "Open protocols: A2A, ACP (Zed), MCP, ATIF"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "llm"
name = "LLM Providers"
description = "Provider abstraction and 21+ provider implementations"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "skills"
name = "Skills"
description = "Skill discovery, loading, validation, and bundling"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "safety"
name = "Safety"
description = "Command safety detection, execution policies, and sandboxing"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "execution"
name = "Execution"
description = "Shell execution, PTY management, and execution telemetry"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "state"
name = "State & Memory"
description = "Session state, durable loop state, and progress tracking"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "tools"
name = "Tools & Search"
description = "Tool specs, code indexing, fuzzy search, and outline mode"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "eval"
name = "Evaluation"
description = "Agent evaluation framework: pass@k, capability and regression evals"
pick = "any"

[[package.metadata.battery-pack.categories]]
id = "auth"
name = "Authentication"
description = "OAuth flows and credential storage"
pick = "any"

[lints]
workspace = true
