[package]
name = "vtcode-skills"
version.workspace = true
edition = "2024"
rust-version = "1.93.0"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Skill types, discovery, loading, and validation for VT Code"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-skills"
categories = ["development-tools"]
keywords = ["vt", "skills", "agent", "plugins", "discovery"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hashbrown.workspace = true
include_dir = "0.7"
libloading = "0.9"
lru = "0.18"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
vtcode-commons = { workspace = true }
vtcode-config = { workspace = true }
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
serial_test.workspace = true

[lints]
workspace = true
